stats update after merge

--- a/PoissonEkstraklasa.ipynb
+++ b/PoissonEkstraklasa.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -33,7 +33,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {
     "scrolled": false
    },
@@ -92,7 +92,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ff7a889792d9468ba67f9a65533eae06",
+       "model_id": "71504ce76daf460eab67ea8a755fea8f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -106,7 +106,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6a0b679d23c046eba012d3d0016b8de6",
+       "model_id": "0ebaafaf377b4f13a5f665b9c504afe5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -120,7 +120,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bd82e537c9774762b5598fa42c7a9125",
+       "model_id": "a5b12a011381434fbaef412ac7f3fe09",
        "version_major": 2,
        "version_minor": 0
       },
@@ -134,7 +134,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2919c1b5ab0443fc8230f52bc1756a73",
+       "model_id": "9b46b016fd014053811192196172fe5b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,62 +294,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[((0, 2), 1780),\n",
-       " ((0, 1), 1566),\n",
-       " ((0, 3), 1369),\n",
-       " ((0, 4), 782),\n",
-       " ((0, 0), 706),\n",
-       " ((1, 2), 671),\n",
-       " ((1, 1), 659),\n",
-       " ((1, 3), 549),\n",
-       " ((0, 5), 353),\n",
-       " ((1, 4), 338),\n",
-       " ((1, 0), 262),\n",
-       " ((2, 2), 154),\n",
-       " ((1, 5), 122),\n",
-       " ((0, 6), 121),\n",
-       " ((2, 1), 113),\n",
-       " ((2, 3), 104),\n",
-       " ((1, 6), 65),\n",
-       " ((2, 4), 60),\n",
-       " ((2, 0), 51),\n",
-       " ((0, 7), 38),\n",
-       " ((2, 5), 28),\n",
-       " ((3, 3), 15),\n",
-       " ((0, 8), 15),\n",
-       " ((3, 2), 13),\n",
-       " ((1, 7), 12),\n",
-       " ((2, 6), 10),\n",
-       " ((3, 5), 7),\n",
-       " ((3, 1), 6),\n",
-       " ((3, 4), 5),\n",
-       " ((3, 0), 5),\n",
-       " ((2, 7), 5),\n",
-       " ((1, 8), 4),\n",
-       " ((1, 9), 3),\n",
-       " ((0, 9), 3),\n",
-       " ((4, 1), 2)]"
+       "[((1, 0), 1406),\n",
+       " ((1, 1), 1329),\n",
+       " ((0, 1), 1011),\n",
+       " ((0, 0), 1011),\n",
+       " ((2, 0), 872),\n",
+       " ((2, 1), 831),\n",
+       " ((1, 2), 584),\n",
+       " ((0, 2), 504),\n",
+       " ((2, 2), 406),\n",
+       " ((3, 0), 398),\n",
+       " ((3, 1), 338),\n",
+       " ((1, 3), 224),\n",
+       " ((3, 2), 158),\n",
+       " ((4, 0), 148),\n",
+       " ((0, 3), 136),\n",
+       " ((2, 3), 128),\n",
+       " ((4, 1), 111),\n",
+       " ((4, 2), 62),\n",
+       " ((3, 3), 55),\n",
+       " ((1, 4), 44),\n",
+       " ((0, 4), 38),\n",
+       " ((5, 1), 35),\n",
+       " ((2, 4), 32),\n",
+       " ((5, 0), 25),\n",
+       " ((3, 4), 20),\n",
+       " ((4, 3), 16),\n",
+       " ((5, 2), 14),\n",
+       " ((1, 5), 10),\n",
+       " ((0, 5), 9),\n",
+       " ((6, 0), 8),\n",
+       " ((5, 3), 6),\n",
+       " ((6, 1), 5),\n",
+       " ((2, 5), 3),\n",
+       " ((1, 6), 3),\n",
+       " ((0, 6), 3)]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "home = home_attack_strength[\"Piast\"]*away_defence_strength[\"Płock\"]*avg_strzelone_dom_liga\n",
-    "away = home_defence_strength[\"Piast\"]*away_attack_strength[\"Płock\"]*avg_strzelone_wyjazd_liga\n",
-    "results = []\n",
-    "rng = np.random.default_rng()\n",
-    "for i in range(0,int(n.value)):\n",
-    "    results.append((rng.poisson(home, 1)[0],rng.poisson(away, 1)[0]))\n",
-    "Counter(results).most_common(35)"
+    "#home = home_attack_strength[\"Wisła\"]*away_defence_strength[\"Lechia\"]*avg_strzelone_dom_liga\n",
+    "#away = home_defence_strength[\"Wisła\"]*away_attack_strength[\"Lechia\"]*avg_strzelone_wyjazd_liga\n",
+    "#results = []\n",
+    "#rng = np.random.default_rng()\n",
+    "#for i in range(0,int(n.value)):\n",
+    "#    results.append((rng.poisson(home, 1)[0],rng.poisson(away, 1)[0]))\n",
+    "#Counter(results).most_common(35)"
    ]
   },
   {
@@ -383,7 +383,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.7.5"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
