--- a/PoissonEkstraklasa.ipynb
+++ b/PoissonEkstraklasa.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -33,7 +33,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 49,
    "metadata": {
     "scrolled": false
    },
@@ -92,7 +92,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "71504ce76daf460eab67ea8a755fea8f",
+       "model_id": "7cd538ba90a9473795fb3664b1579f28",
        "version_major": 2,
        "version_minor": 0
       },
@@ -106,7 +106,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0ebaafaf377b4f13a5f665b9c504afe5",
+       "model_id": "25256c3e04de4372adcbcc6cfd098f4b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -120,7 +120,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a5b12a011381434fbaef412ac7f3fe09",
+       "model_id": "4efe2dbde10149c0973f51b983dc8395",
        "version_major": 2,
        "version_minor": 0
       },
@@ -134,7 +134,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9b46b016fd014053811192196172fe5b",
+       "model_id": "313b2021324f43b0ba7b704c856e041c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,18 +177,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
-    "mecze_liga = 6*8 + 7 + 6\n",
-    "avg_strzelone_dom_liga = (13+8+13+9+12+11+8+10)/mecze_liga\n",
-    "avg_strzelone_wyjazd_liga = (9+15+10+14+9+8+14+6)/mecze_liga"
+    "mecze_liga = 7*8 + 7\n",
+    "avg_strzelone_dom_liga = (13+8+13+9+12+14+8+10)/mecze_liga\n",
+    "avg_strzelone_wyjazd_liga = (9+15+10+14+12+11+14+6)/mecze_liga"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,57 +294,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 55,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[((1, 0), 1406),\n",
-       " ((1, 1), 1329),\n",
-       " ((0, 1), 1011),\n",
-       " ((0, 0), 1011),\n",
-       " ((2, 0), 872),\n",
-       " ((2, 1), 831),\n",
-       " ((1, 2), 584),\n",
-       " ((0, 2), 504),\n",
-       " ((2, 2), 406),\n",
-       " ((3, 0), 398),\n",
-       " ((3, 1), 338),\n",
-       " ((1, 3), 224),\n",
-       " ((3, 2), 158),\n",
-       " ((4, 0), 148),\n",
-       " ((0, 3), 136),\n",
-       " ((2, 3), 128),\n",
-       " ((4, 1), 111),\n",
-       " ((4, 2), 62),\n",
-       " ((3, 3), 55),\n",
-       " ((1, 4), 44),\n",
-       " ((0, 4), 38),\n",
-       " ((5, 1), 35),\n",
-       " ((2, 4), 32),\n",
-       " ((5, 0), 25),\n",
-       " ((3, 4), 20),\n",
-       " ((4, 3), 16),\n",
-       " ((5, 2), 14),\n",
-       " ((1, 5), 10),\n",
-       " ((0, 5), 9),\n",
-       " ((6, 0), 8),\n",
-       " ((5, 3), 6),\n",
-       " ((6, 1), 5),\n",
-       " ((2, 5), 3),\n",
-       " ((1, 6), 3),\n",
-       " ((0, 6), 3)]"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "#home = home_attack_strength[\"Wisła\"]*away_defence_strength[\"Lechia\"]*avg_strzelone_dom_liga\n",
-    "#away = home_defence_strength[\"Wisła\"]*away_attack_strength[\"Lechia\"]*avg_strzelone_wyjazd_liga\n",
+    "#home = home_attack_strength[\"Pogoń\"]*away_defence_strength[\"Jagiellonia\"]*avg_strzelone_dom_liga\n",
+    "#away = home_defence_strength[\"Pogoń\"]*away_attack_strength[\"Jagiellonia\"]*avg_strzelone_wyjazd_liga\n",
     "#results = []\n",
     "#rng = np.random.default_rng()\n",
     "#for i in range(0,int(n.value)):\n",
@@ -383,7 +338,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.6.10"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
