--- a/PoissonEkstraklasa.ipynb
+++ b/PoissonEkstraklasa.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -33,7 +33,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {
     "scrolled": false
    },
@@ -92,7 +92,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "73b9704032d6401d9f53db391f2e51de",
+       "model_id": "301ae958fca749a9a69ac7347260e0b9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -106,7 +106,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c921207016a64c5ba248f9249b912ae9",
+       "model_id": "0032bbca656949028920d2eaba1c1a5c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -120,7 +120,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "027ba1d35b134ff08878027d2415b1e9",
+       "model_id": "324b65a50f7a4ee0b145622250e21503",
        "version_major": 2,
        "version_minor": 0
       },
@@ -134,7 +134,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "25034cc563474324a81a1226d78b85b0",
+       "model_id": "45dd8ed148cf457f829ab9223df848a9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,17 +294,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[((0, 0), 2144),\n",
+       " ((1, 0), 2098),\n",
+       " ((0, 1), 1299),\n",
+       " ((1, 1), 1228),\n",
+       " ((2, 0), 929),\n",
+       " ((2, 1), 545),\n",
+       " ((0, 2), 359),\n",
+       " ((1, 2), 346),\n",
+       " ((3, 0), 300),\n",
+       " ((2, 2), 161),\n",
+       " ((3, 1), 156),\n",
+       " ((0, 3), 75),\n",
+       " ((1, 3), 74),\n",
+       " ((4, 0), 66),\n",
+       " ((3, 2), 52),\n",
+       " ((4, 1), 40),\n",
+       " ((2, 3), 32),\n",
+       " ((4, 2), 16),\n",
+       " ((0, 4), 15),\n",
+       " ((1, 4), 15),\n",
+       " ((5, 0), 13),\n",
+       " ((3, 3), 8),\n",
+       " ((5, 1), 6),\n",
+       " ((0, 5), 5),\n",
+       " ((2, 4), 5),\n",
+       " ((4, 3), 3),\n",
+       " ((1, 5), 3),\n",
+       " ((6, 1), 2),\n",
+       " ((4, 4), 1),\n",
+       " ((6, 3), 1),\n",
+       " ((6, 0), 1),\n",
+       " ((7, 0), 1),\n",
+       " ((5, 2), 1)]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#home = home_attack_strength[\"Górnik\"]*away_defence_strength[\"Cracovia\"]*avg_strzelone_dom_liga\n",
-    "#away = home_defence_strength[\"Górnik\"]*away_attack_strength[\"Cracovia\"]*avg_strzelone_wyjazd_liga\n",
-    "#results = []\n",
-    "#rng = np.random.default_rng()\n",
-    "#for i in range(0,int(n.value)):\n",
-    "#    results.append((rng.poisson(home, 1)[0],rng.poisson(away, 1)[0]))\n",
-    "#Counter(results).most_common(35)"
+    "home = home_attack_strength[\"Płock\"]*away_defence_strength[\"Podbeskidzie\"]*avg_strzelone_dom_liga\n",
+    "away = home_defence_strength[\"Płock\"]*away_attack_strength[\"Podbeskidzie\"]*avg_strzelone_wyjazd_liga\n",
+    "results = []\n",
+    "rng = np.random.default_rng()\n",
+    "for i in range(0,int(n.value)):\n",
+    "    results.append((rng.poisson(home, 1)[0],rng.poisson(away, 1)[0]))\n",
+    "Counter(results).most_common(35)"
    ]
   },
   {
@@ -338,7 +381,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.6.10"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
