predictability analysis added

--- a/PoissonEkstraklasa.ipynb
+++ b/PoissonEkstraklasa.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -33,7 +33,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -64,27 +64,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
     "import ipywidgets as widgets\n",
     "from ipywidgets import Layout\n",
     "\n",
-    "style = {'description_width': 'initial'}\n",
-    "\n",
-    "#ben_strzelone_dom = widgets.FloatSlider(value=0.85, min=0.35, max=2,step=0.05,description='Mnożnik strzelonych u siebie bramek przez beniaminków',disabled=False, style=style, layout=Layout(min_width='50%'))\n",
-    "\n",
-    "#ben_strzelone_wyjazd = widgets.FloatSlider(value=0.90, min=0.35, max=2,step=0.05,description='Mnożnik strzelonych na wyjeździe bramek przez beniaminków',disabled=False, style=style, layout=Layout(min_width='50%'))\n",
-    "\n",
-    "#ben_stracone_dom = widgets.FloatSlider(value=2.8, min=0.5, max=3.5,step=0.05, description='Mnożnik straconych u siebie bramek przez beniaminków',disabled=False, style=style, layout=Layout(min_width='50%'))\n",
-    "\n",
-    "#ben_stracone_wyjazd = widgets.FloatSlider(value=2.15, min=0.5, max=3.5,step=0.05,description='Mnożnik straconych na wyjeździe bramek przez beniaminków',disabled=False, style=style, layout=Layout(min_width='50%'))"
+    "style = {'description_width': 'initial'}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 28,
    "metadata": {
     "scrolled": false
    },
@@ -92,7 +84,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "301ae958fca749a9a69ac7347260e0b9",
+       "model_id": "ff9a96fd2f0c420fa23db96069ac9848",
        "version_major": 2,
        "version_minor": 0
       },
@@ -106,7 +98,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0032bbca656949028920d2eaba1c1a5c",
+       "model_id": "5bab3bef3eb04408b1f7be22974b7294",
        "version_major": 2,
        "version_minor": 0
       },
@@ -120,7 +112,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "324b65a50f7a4ee0b145622250e21503",
+       "model_id": "d47485e2f6f64cddb2ee04331d0115ad",
        "version_major": 2,
        "version_minor": 0
       },
@@ -134,7 +126,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "45dd8ed148cf457f829ab9223df848a9",
+       "model_id": "094e21dcb2754b99ba4df4fccaa448b7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -153,11 +145,6 @@
     "display(n)\n",
     "display(kolejka)\n",
     "\n",
-    "#display(ben_strzelone_dom)\n",
-    "#display(ben_strzelone_wyjazd)\n",
-    "#display(ben_stracone_dom)\n",
-    "#display(ben_stracone_wyjazd)\n",
-    "\n",
     "button = widgets.Button(description='Zatwierdź',disabled=False,tooltip='Confirm',icon='check') \n",
     "output = widgets.Output()\n",
     "display(button,output)"
@@ -165,30 +152,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Do V kolejki\n",
-    "#mecze_liga = 8*19+8*18 + 8*5\n",
-    "#avg_strzelone_dom_liga = (449+13+8+13+9+10)/mecze_liga\n",
-    "#avg_strzelone_wyjazd_liga = (318+9+15+10+14+8)/mecze_liga"
+    "mecze_liga = 14*8\n",
+    "avg_strzelone_dom_liga = (13+8+13+9+12+14+8+10+11+15+9+15+8+10)/mecze_liga\n",
+    "avg_strzelone_wyjazd_liga = (9+15+10+14+13+11+14+6+8+10+10+6+16+9)/mecze_liga"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mecze_liga = 12*8 + 7\n",
-    "avg_strzelone_dom_liga = (13+8+13+9+12+14+8+10+11+15+9+15+8)/mecze_liga\n",
-    "avg_strzelone_wyjazd_liga = (9+15+10+14+12+11+14+6+8+10+10+6+16)/mecze_liga"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,21 +185,6 @@
     "        avg_strzelone_wyjazd[x.strip().split(\",\")[0]]= int(x.strip().split(\",\")[3])/int(x.strip().split(\",\")[6])\n",
     "        avg_stracone_wyjazd[x.strip().split(\",\")[0]] = int(x.strip().split(\",\")[4])/int(x.strip().split(\",\")[6])\n",
     "        \n",
-    "    #avg_strzelone_dom['Stal'] = avg_strzelone_dom['Stal']*ben_strzelone_dom.value\n",
-    "    #avg_stracone_dom['Stal'] = avg_stracone_dom['Stal']*ben_stracone_dom.value\n",
-    "    #avg_strzelone_wyjazd['Stal'] = avg_strzelone_wyjazd['Stal']*ben_strzelone_wyjazd.value\n",
-    "    #avg_stracone_wyjazd['Stal'] = avg_stracone_wyjazd['Stal']*ben_stracone_wyjazd.value\n",
-    "    \n",
-    "    #avg_strzelone_dom['Warta'] = avg_strzelone_dom['Warta']*ben_strzelone_dom.value\n",
-    "    #avg_stracone_dom['Warta'] = avg_stracone_dom['Warta']*ben_stracone_dom.value\n",
-    "    #avg_strzelone_wyjazd['Warta'] = avg_strzelone_wyjazd['Warta']*ben_strzelone_wyjazd.value\n",
-    "    #avg_stracone_wyjazd['Warta'] = avg_stracone_wyjazd['Warta']*ben_stracone_wyjazd.value\n",
-    "    \n",
-    "    #avg_strzelone_dom['Podbeskidzie'] = avg_strzelone_dom['Podbeskidzie']*ben_strzelone_dom.value\n",
-    "    #avg_stracone_dom['Podbeskidzie'] = avg_stracone_dom['Podbeskidzie']*ben_stracone_dom.value\n",
-    "    #avg_strzelone_wyjazd['Podbeskidzie'] = avg_strzelone_wyjazd['Podbeskidzie']*ben_strzelone_wyjazd.value\n",
-    "    #avg_stracone_wyjazd['Podbeskidzie'] = avg_stracone_wyjazd['Podbeskidzie']*ben_stracone_wyjazd.value\n",
-    "\n",
     "    global home_attack_strength\n",
     "    home_attack_strength = {}\n",
     "    global home_defence_strength\n",
@@ -238,18 +198,12 @@
     "        home_attack_strength[k] = avg_strzelone_dom[k]/avg_strzelone_dom_liga\n",
     "        home_defence_strength[k] = avg_stracone_dom[k]/avg_strzelone_wyjazd_liga\n",
     "        away_attack_strength[k] = avg_strzelone_wyjazd[k]/avg_strzelone_wyjazd_liga\n",
-    "        away_defence_strength[k] = avg_stracone_wyjazd[k]/avg_strzelone_dom_liga\n",
-    "        \n",
-    "    #print(avg_strzelone_dom.keys())\n",
-    "    #print(home_attack_strength)\n",
-    "    #print(home_defence_strength)\n",
-    "    #print(away_attack_strength)\n",
-    "    #print(away_defence_strength)"
+    "        away_defence_strength[k] = avg_stracone_wyjazd[k]/avg_strzelone_dom_liga"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,7 +213,7 @@
     "\n",
     "def display_matchday(a):\n",
     "    clear_output()\n",
-    "    h = open(\"Kolejki Ekstraklasa/\"+str(a), \"r\", encoding='utf-8')\n",
+    "    h = open(f\"KolejkiEkstraklasa/{str(a)}\", \"r\", encoding='utf-8')\n",
     "    for x in h:\n",
     "        home_team = x.strip().split(\",\")[0].split(\"-\")[0]\n",
     "        away_team = x.strip().split(\",\")[0].split(\"-\")[1]\n",
@@ -280,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,68 +248,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[((0, 0), 2144),\n",
-       " ((1, 0), 2098),\n",
-       " ((0, 1), 1299),\n",
-       " ((1, 1), 1228),\n",
-       " ((2, 0), 929),\n",
-       " ((2, 1), 545),\n",
-       " ((0, 2), 359),\n",
-       " ((1, 2), 346),\n",
-       " ((3, 0), 300),\n",
-       " ((2, 2), 161),\n",
-       " ((3, 1), 156),\n",
-       " ((0, 3), 75),\n",
-       " ((1, 3), 74),\n",
-       " ((4, 0), 66),\n",
-       " ((3, 2), 52),\n",
-       " ((4, 1), 40),\n",
-       " ((2, 3), 32),\n",
-       " ((4, 2), 16),\n",
-       " ((0, 4), 15),\n",
-       " ((1, 4), 15),\n",
-       " ((5, 0), 13),\n",
-       " ((3, 3), 8),\n",
-       " ((5, 1), 6),\n",
-       " ((0, 5), 5),\n",
-       " ((2, 4), 5),\n",
-       " ((4, 3), 3),\n",
-       " ((1, 5), 3),\n",
-       " ((6, 1), 2),\n",
-       " ((4, 4), 1),\n",
-       " ((6, 3), 1),\n",
-       " ((6, 0), 1),\n",
-       " ((7, 0), 1),\n",
-       " ((5, 2), 1)]"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "home = home_attack_strength[\"Płock\"]*away_defence_strength[\"Podbeskidzie\"]*avg_strzelone_dom_liga\n",
-    "away = home_defence_strength[\"Płock\"]*away_attack_strength[\"Podbeskidzie\"]*avg_strzelone_wyjazd_liga\n",
-    "results = []\n",
-    "rng = np.random.default_rng()\n",
-    "for i in range(0,int(n.value)):\n",
-    "    results.append((rng.poisson(home, 1)[0],rng.poisson(away, 1)[0]))\n",
-    "Counter(results).most_common(35)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#home = home_attack_strength[\"Lech\"]*away_defence_strength[\"Pogoń\"]*avg_strzelone_dom_liga\n",
+    "#away = home_defence_strength[\"Lech\"]*away_attack_strength[\"Pogoń\"]*avg_strzelone_wyjazd_liga\n",
+    "#results = []\n",
+    "#rng = np.random.default_rng()\n",
+    "#for i in range(0,int(n.value)):\n",
+    "#    results.append((rng.poisson(home, 1)[0],rng.poisson(away, 1)[0]))\n",
+    "#Counter(results).most_common(35)"
+   ]
   },
   {
    "cell_type": "code",
