analysis extended, stats update

--- a/PoissonEkstraklasa.ipynb
+++ b/PoissonEkstraklasa.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -33,7 +33,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 16,
    "metadata": {
     "scrolled": false
    },
@@ -84,7 +84,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ff9a96fd2f0c420fa23db96069ac9848",
+       "model_id": "cab89191a59d44cb8db0df9c836bfa48",
        "version_major": 2,
        "version_minor": 0
       },
@@ -98,7 +98,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5bab3bef3eb04408b1f7be22974b7294",
+       "model_id": "0c9b0bf66b394feea715eb4f11c574fd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -112,7 +112,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d47485e2f6f64cddb2ee04331d0115ad",
+       "model_id": "5565ce3dc0b94d49a5e0b0d7abe7d4f7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -126,7 +126,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "094e21dcb2754b99ba4df4fccaa448b7",
+       "model_id": "7eea8355cafc4fd3ab5ee9aaf74cb2f9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -152,18 +152,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "mecze_liga = 14*8\n",
-    "avg_strzelone_dom_liga = (13+8+13+9+12+14+8+10+11+15+9+15+8+10)/mecze_liga\n",
-    "avg_strzelone_wyjazd_liga = (9+15+10+14+13+11+14+6+8+10+10+6+16+9)/mecze_liga"
+    "mecze_liga = 15*8\n",
+    "avg_strzelone_dom_liga = (13+8+13+9+12+14+8+10+11+15+9+15+8+10+6)/mecze_liga\n",
+    "avg_strzelone_wyjazd_liga = (9+15+10+14+13+11+14+6+8+10+10+6+16+9+10)/mecze_liga"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,12 +248,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#home = home_attack_strength[\"Lech\"]*away_defence_strength[\"Pogoń\"]*avg_strzelone_dom_liga\n",
-    "#away = home_defence_strength[\"Lech\"]*away_attack_strength[\"Pogoń\"]*avg_strzelone_wyjazd_liga\n",
+    "#home = home_attack_strength[\"Zagłębie\"]*away_defence_strength[\"Płock\"]*avg_strzelone_dom_liga\n",
+    "#away = home_defence_strength[\"Zagłębie\"]*away_attack_strength[\"Płock\"]*avg_strzelone_wyjazd_liga\n",
     "#results = []\n",
     "#rng = np.random.default_rng()\n",
     "#for i in range(0,int(n.value)):\n",
