--- a/Poisson1Liga.ipynb
+++ b/Poisson1Liga.ipynb
@@ -78,13 +78,13 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "af1c9a0c277d4c75872e7f63dceedcac",
+       "model_id": "35ef99b58c404f80b06b10185a8fcc05",
        "version_major": 2,
        "version_minor": 0
       },
@@ -98,7 +98,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b4afc58c5b0a44faa81f9eec10b2e712",
+       "model_id": "85949fe001d0428eb7feb2094c2f3694",
        "version_major": 2,
        "version_minor": 0
       },
@@ -112,7 +112,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "aa25b9632a1443878ebd82bd11ed2447",
+       "model_id": "830efb62a8e84f1c86246600e1876b5b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -126,7 +126,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4aeb704bc30d4e5bbae81b2dda44ba24",
+       "model_id": "c6b61a2c49b44815a1a44eff7b2da695",
        "version_major": 2,
        "version_minor": 0
       },
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,7 +285,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.7.5"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
