--- a/PoissonEkstraklasa.ipynb
+++ b/PoissonEkstraklasa.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -33,7 +33,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {
     "scrolled": false
    },
@@ -84,7 +84,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "087402ac9622423e83527659d82af924",
+       "model_id": "122cfdadf9fb432c9052d7a8328d4635",
        "version_major": 2,
        "version_minor": 0
       },
@@ -98,7 +98,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0e600a6cdfa348d0941bf8a3faf48ef7",
+       "model_id": "ca076f5e02274c4aa523a603aad0de46",
        "version_major": 2,
        "version_minor": 0
       },
@@ -112,7 +112,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "77eb9a923ea5464187cba20f45b36bc3",
+       "model_id": "838a733575644fe4a0d4c487298bb4be",
        "version_major": 2,
        "version_minor": 0
       },
@@ -126,7 +126,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e1d0340c5e3944ceb59de9c091fb749e",
+       "model_id": "7d6e9b4c3aad4aeb857efd78dacb149b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -152,18 +152,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "mecze_liga = 18*8 + 7\n",
-    "avg_strzelone_dom_liga = (13+8+13+9+12+14+8+10+11+15+9+15+8+10+6+10+7+12+8)/mecze_liga\n",
-    "avg_strzelone_wyjazd_liga = (9+15+10+14+13+11+14+6+8+10+10+6+16+9+10+2+5+7+14)/mecze_liga"
+    "strzelone_dom = {\n",
+    "    1: 13,    2: 8,    3: 13,    4: 9,    5: 12,    6: 14,    7: 8,    8: 10,    9: 11,    10: 15,\n",
+    "    11: 9,    12: 15,    13: 8,    14: 10,    15: 6,    16: 10,    17: 7,    18: 12,    19: 8,    20: 0,\n",
+    "    21: 0,    22: 0,    23: 0,    24: 0,    25: 0,    26: 0,    27: 0,    28: 0,    29: 0,    30: 0\n",
+    "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "strzelone_wyjazd = {\n",
+    "    1: 9,    2: 15,    3: 10,    4: 14,    5: 13,    6: 11,    7: 14,    8: 6,    9: 8,    10: 10,\n",
+    "    11: 10,    12: 6,    13: 16,    14: 9,    15: 10,    16: 2,    17: 5,    18: 7,    19: 14,    20: 0,\n",
+    "    21: 0,    22: 0,    23: 0,    24: 0,    25: 0,    26: 0,    27: 0,    28: 0,    29: 0,    30: 0\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mecze_liga = 18*8 + 7\n",
+    "avg_strzelone_dom_liga = sum(list(strzelone_dom.values()))/mecze_liga\n",
+    "avg_strzelone_wyjazd_liga = sum(list(strzelone_wyjazd.values()))/mecze_liga"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,7 +311,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.6.10"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
