--- a/PoissonEkstraklasa.ipynb
+++ b/PoissonEkstraklasa.ipynb
@@ -84,7 +84,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cfda5e12dc8e4810bf29c4e028fac641",
+       "model_id": "c6905a5e90c64733abe7ec51590c1660",
        "version_major": 2,
        "version_minor": 0
       },
@@ -98,7 +98,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "16442ed498324227880baddd4fdfc173",
+       "model_id": "532fb4bd4db6487c86e7edea0654a34f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -112,7 +112,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "daebc19c67aa40e0998ffaa6c72cddfd",
+       "model_id": "b3d249900499476f898cfa2db363dbd0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -126,7 +126,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "49b29a0d18934eb1a062937b45296535",
+       "model_id": "fcd40b06715944e9aaff8100f0ed3c92",
        "version_major": 2,
        "version_minor": 0
       },
@@ -158,7 +158,7 @@
    "source": [
     "strzelone_dom = {\n",
     "    1: 13,    2: 8,    3: 13,    4: 9,    5: 12,    6: 14,    7: 8,    8: 10,    9: 11,    10: 15,\n",
-    "    11: 9,    12: 15,    13: 8,    14: 10,    15: 6,    16: 12,    17: 7,    18: 12,    19: 8,    20: 0,\n",
+    "    11: 9,    12: 15,    13: 8,    14: 10,    15: 6,    16: 12,    17: 7,    18: 12,    19: 8,    20: 9,\n",
     "    21: 0,    22: 0,    23: 0,    24: 0,    25: 0,    26: 0,    27: 0,    28: 0,    29: 0,    30: 0\n",
     "}"
    ]
@@ -171,7 +171,7 @@
    "source": [
     "strzelone_wyjazd = {\n",
     "    1: 9,    2: 15,    3: 10,    4: 14,    5: 13,    6: 11,    7: 14,    8: 6,    9: 8,    10: 10,\n",
-    "    11: 10,    12: 6,    13: 16,    14: 9,    15: 10,    16: 4,    17: 5,    18: 7,    19: 14,    20: 0,\n",
+    "    11: 10,    12: 6,    13: 16,    14: 9,    15: 10,    16: 4,    17: 5,    18: 7,    19: 14,    20: 5,\n",
     "    21: 0,    22: 0,    23: 0,    24: 0,    25: 0,    26: 0,    27: 0,    28: 0,    29: 0,    30: 0\n",
     "}"
    ]
@@ -182,7 +182,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mecze_liga = 19*8\n",
+    "mecze_liga = 20*8\n",
     "avg_strzelone_dom_liga = sum(list(strzelone_dom.values()))/mecze_liga\n",
     "avg_strzelone_wyjazd_liga = sum(list(strzelone_wyjazd.values()))/mecze_liga"
    ]
@@ -206,10 +206,11 @@
     "    \n",
     "    g = open(\"Statystyki/poissonstats-ekstraklasa\", \"r\", encoding='utf-8')\n",
     "    for x in g:\n",
-    "        avg_strzelone_dom[x.strip().split(\",\")[0]] = int(x.strip().split(\",\")[1])/int(x.strip().split(\",\")[5])\n",
-    "        avg_stracone_dom[x.strip().split(\",\")[0]] = int(x.strip().split(\",\")[2])/int(x.strip().split(\",\")[5])\n",
-    "        avg_strzelone_wyjazd[x.strip().split(\",\")[0]]= int(x.strip().split(\",\")[3])/int(x.strip().split(\",\")[6])\n",
-    "        avg_stracone_wyjazd[x.strip().split(\",\")[0]] = int(x.strip().split(\",\")[4])/int(x.strip().split(\",\")[6])\n",
+    "        team = x.strip().split(\",\")[0]\n",
+    "        avg_strzelone_dom[team] = int(x.strip().split(\",\")[1])/int(x.strip().split(\",\")[5])\n",
+    "        avg_stracone_dom[team] = int(x.strip().split(\",\")[2])/int(x.strip().split(\",\")[5])\n",
+    "        avg_strzelone_wyjazd[team]= int(x.strip().split(\",\")[3])/int(x.strip().split(\",\")[6])\n",
+    "        avg_stracone_wyjazd[team] = int(x.strip().split(\",\")[4])/int(x.strip().split(\",\")[6])\n",
     "        \n",
     "    global home_attack_strength\n",
     "    home_attack_strength = {}\n",
@@ -274,12 +275,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[((0, 1), 1497),\n",
+       " ((0, 2), 1162),\n",
+       " ((1, 1), 1126),\n",
+       " ((1, 2), 909),\n",
+       " ((0, 0), 822),\n",
+       " ((1, 0), 760),\n",
+       " ((0, 3), 573),\n",
+       " ((2, 1), 500),\n",
+       " ((1, 3), 487),\n",
+       " ((2, 2), 364),\n",
+       " ((2, 0), 327),\n",
+       " ((0, 4), 229),\n",
+       " ((1, 4), 208),\n",
+       " ((2, 3), 204),\n",
+       " ((3, 1), 130),\n",
+       " ((3, 2), 114),\n",
+       " ((3, 0), 83),\n",
+       " ((2, 4), 72),\n",
+       " ((1, 5), 71),\n",
+       " ((0, 5), 64),\n",
+       " ((3, 3), 60),\n",
+       " ((4, 1), 35),\n",
+       " ((3, 4), 32),\n",
+       " ((2, 5), 30),\n",
+       " ((4, 2), 20),\n",
+       " ((4, 0), 20),\n",
+       " ((0, 6), 19),\n",
+       " ((1, 6), 18),\n",
+       " ((4, 3), 14),\n",
+       " ((3, 5), 9),\n",
+       " ((2, 6), 7),\n",
+       " ((1, 7), 5),\n",
+       " ((5, 1), 5),\n",
+       " ((5, 3), 4),\n",
+       " ((4, 4), 4)]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#home = home_attack_strength[\"Płock\"]*away_defence_strength[\"Wisła\"]*avg_strzelone_dom_liga\n",
-    "#away = home_defence_strength[\"Płock\"]*away_attack_strength[\"Wisła\"]*avg_strzelone_wyjazd_liga\n",
+    "#home = home_attack_strength[\"Podbeskidzie\"]*away_defence_strength[\"Lechia\"]*avg_strzelone_dom_liga\n",
+    "#away = home_defence_strength[\"Podbeskidzie\"]*away_attack_strength[\"Lechia\"]*avg_strzelone_wyjazd_liga\n",
     "#results = []\n",
     "#rng = np.random.default_rng()\n",
     "#for i in range(0,int(n.value)):\n",
