--- a/TimeWeighted1Liga.ipynb
+++ b/TimeWeighted1Liga.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -26,7 +26,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "metadata": {
     "scrolled": false
    },
@@ -70,7 +70,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ba20f481d2da46a5a726aa503139ffd3",
+       "model_id": "801d8eb163f24825bd5d3dac34d9fb6e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -84,7 +84,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4080710323794664a67213834150f31a",
+       "model_id": "2f54b0ac473c459db48037a4cda01c27",
        "version_major": 2,
        "version_minor": 0
       },
@@ -98,7 +98,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2dc7c6f3b7304c2386169fb47651537a",
+       "model_id": "a0eaf6dfeb704352909bb8264b41dda9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -112,7 +112,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5c1ba7cf4510454b80148d404e9b4413",
+       "model_id": "bdc586d6a5444c46be4cd79c75624bfe",
        "version_major": 2,
        "version_minor": 0
       },
@@ -138,42 +138,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "strzelone_dom = {\n",
     "    1: 12,    2: 13,    3: 17,    4: 14,    5: 13,    6: 7,    7: 13,    8: 8,    9: 11,    10: 10,\n",
     "    11: 13,    12: 11,    13: 10,    14: 13,    15: 15,    16: 18,    17: 4,    18: 13,    19: 18,    20: 7,\n",
-    "    21: 5,    22: 0,    23: 0,    24: 0,    25: 0,    26: 0,    27: 0,    28: 0,    29: 0,    30: 0\n",
+    "    21: 5,    22: 10,    23: 0,    24: 0,    25: 0,    26: 0,    27: 0,    28: 0,    29: 0,    30: 0\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "strzelone_wyjazd = {\n",
     "    1: 14,    2: 10,    3: 1,    4: 7,    5: 6,    6: 17,    7: 7,    8: 9,    9: 5,    10: 7,\n",
     "    11: 14,    12: 9,    13: 14,    14: 8,    15: 9,    16: 6,    17: 17,    18: 10,    19: 11,    20: 9,\n",
-    "    21: 7,    22: 0,    23: 0,    24: 0,    25: 0,    26: 0,    27: 0,    28: 0,    29: 0,    30: 0\n",
+    "    21: 7,    22: 5,    23: 0,    24: 0,    25: 0,    26: 0,    27: 0,    28: 0,    29: 0,    30: 0\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "mecze_liga = 20*9 + 8"
+    "mecze_liga = 20*9 + 8 + 8"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
