--- a/PoissonEkstraklasa.ipynb
+++ b/PoissonEkstraklasa.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -33,7 +33,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {
     "scrolled": false
    },
@@ -84,7 +84,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c26437edbc404b87b4f13ee3344c9f62",
+       "model_id": "f48759705eb443a8a405f6beaa20e387",
        "version_major": 2,
        "version_minor": 0
       },
@@ -98,7 +98,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a467c9e3122f4ca9be37dacfbaeb7cd3",
+       "model_id": "9c331f0101a04e6ab34f3d91f491df6c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -112,7 +112,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fb2e0aca98264a94b4416191872934c5",
+       "model_id": "dd4828d2bf424451ad4387e2de707f50",
        "version_major": 2,
        "version_minor": 0
       },
@@ -126,7 +126,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cc245671c43f4fdebff71f0034ea6bb5",
+       "model_id": "bfc1167306c54dcea0547f5aa9e02a11",
        "version_major": 2,
        "version_minor": 0
       },
@@ -152,44 +152,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "strzelone_dom = {\n",
     "    1: 13,    2: 8,    3: 13,    4: 9,    5: 12,    6: 14,    7: 8,    8: 10,    9: 11,    10: 15,\n",
     "    11: 9,    12: 15,    13: 8,    14: 10,    15: 6,    16: 12,    17: 7,    18: 12,    19: 8,    20: 9,\n",
-    "    21: 12,    22: 10,    23: 0,    24: 0,    25: 0,    26: 0,    27: 0,    28: 0,    29: 0,    30: 0\n",
+    "    21: 12,    22: 10,    23: 12,    24: 0,    25: 0,    26: 0,    27: 0,    28: 0,    29: 0,    30: 0\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "strzelone_wyjazd = {\n",
     "    1: 9,    2: 15,    3: 10,    4: 14,    5: 13,    6: 11,    7: 14,    8: 6,    9: 8,    10: 10,\n",
     "    11: 10,    12: 6,    13: 16,    14: 9,    15: 10,    16: 4,    17: 5,    18: 7,    19: 14,    20: 5,\n",
-    "    21: 7,    22: 8,    23: 0,    24: 0,    25: 0,    26: 0,    27: 0,    28: 0,    29: 0,    30: 0\n",
+    "    21: 7,    22: 8,    23: 8,    24: 0,    25: 0,    26: 0,    27: 0,    28: 0,    29: 0,    30: 0\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "mecze_liga = 22*8\n",
+    "mecze_liga = 22*8 + 7\n",
     "avg_strzelone_dom_liga = sum(list(strzelone_dom.values()))/mecze_liga\n",
     "avg_strzelone_wyjazd_liga = sum(list(strzelone_wyjazd.values()))/mecze_liga"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,53 +275,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[((0, 1), 2119),\n",
-       " ((0, 0), 1930),\n",
-       " ((1, 1), 1216),\n",
-       " ((0, 2), 1128),\n",
-       " ((1, 0), 1081),\n",
-       " ((1, 2), 632),\n",
-       " ((0, 3), 396),\n",
-       " ((2, 1), 331),\n",
-       " ((2, 0), 282),\n",
-       " ((1, 3), 228),\n",
-       " ((2, 2), 184),\n",
-       " ((0, 4), 115),\n",
-       " ((3, 1), 69),\n",
-       " ((1, 4), 61),\n",
-       " ((2, 3), 53),\n",
-       " ((3, 0), 50),\n",
-       " ((3, 2), 31),\n",
-       " ((0, 5), 29),\n",
-       " ((2, 4), 15),\n",
-       " ((3, 3), 10),\n",
-       " ((4, 2), 9),\n",
-       " ((1, 5), 8),\n",
-       " ((4, 1), 6),\n",
-       " ((4, 0), 5),\n",
-       " ((4, 3), 4),\n",
-       " ((3, 4), 3),\n",
-       " ((3, 5), 1),\n",
-       " ((4, 6), 1),\n",
-       " ((2, 5), 1),\n",
-       " ((0, 6), 1),\n",
-       " ((1, 6), 1)]"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "#home = home_attack_strength[\"Zagłębie\"]*away_defence_strength[\"Legia\"]*avg_strzelone_dom_liga\n",
-    "#away = home_defence_strength[\"Zagłębie\"]*away_attack_strength[\"Legia\"]*avg_strzelone_wyjazd_liga\n",
+    "#home = home_attack_strength[\"Legia\"]*away_defence_strength[\"Pogoń\"]*avg_strzelone_dom_liga\n",
+    "#away = home_defence_strength[\"Legia\"]*away_attack_strength[\"Pogoń\"]*avg_strzelone_wyjazd_liga\n",
     "#results = []\n",
     "#rng = np.random.default_rng()\n",
     "#for i in range(0,int(n.value)):\n",
@@ -353,7 +312,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.6.13"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
