--- a/TimeWeighted1Liga.ipynb
+++ b/TimeWeighted1Liga.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -26,7 +26,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {
     "scrolled": false
    },
@@ -70,7 +70,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "801d8eb163f24825bd5d3dac34d9fb6e",
+       "model_id": "10913acd612549988982e16f3f8affb9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -84,7 +84,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2f54b0ac473c459db48037a4cda01c27",
+       "model_id": "499a4375f6f54b0598094924027ba4ed",
        "version_major": 2,
        "version_minor": 0
       },
@@ -98,7 +98,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a0eaf6dfeb704352909bb8264b41dda9",
+       "model_id": "850dce24eb604f93ac555d8905f10b1d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -112,7 +112,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bdc586d6a5444c46be4cd79c75624bfe",
+       "model_id": "3be0d2a985b24058ba38a617df2c9d95",
        "version_major": 2,
        "version_minor": 0
       },
@@ -138,42 +138,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "strzelone_dom = {\n",
     "    1: 12,    2: 13,    3: 17,    4: 14,    5: 13,    6: 7,    7: 13,    8: 8,    9: 11,    10: 10,\n",
     "    11: 13,    12: 11,    13: 10,    14: 13,    15: 15,    16: 18,    17: 4,    18: 13,    19: 18,    20: 7,\n",
-    "    21: 5,    22: 10,    23: 0,    24: 0,    25: 0,    26: 0,    27: 0,    28: 0,    29: 0,    30: 0\n",
+    "    21: 5,    22: 10,    23: 10,    24: 0,    25: 0,    26: 0,    27: 0,    28: 0,    29: 0,    30: 0\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "strzelone_wyjazd = {\n",
     "    1: 14,    2: 10,    3: 1,    4: 7,    5: 6,    6: 17,    7: 7,    8: 9,    9: 5,    10: 7,\n",
     "    11: 14,    12: 9,    13: 14,    14: 8,    15: 9,    16: 6,    17: 17,    18: 10,    19: 11,    20: 9,\n",
-    "    21: 7,    22: 5,    23: 0,    24: 0,    25: 0,    26: 0,    27: 0,    28: 0,    29: 0,    30: 0\n",
+    "    21: 7,    22: 5,    23: 9,    24: 0,    25: 0,    26: 0,    27: 0,    28: 0,    29: 0,    30: 0\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "mecze_liga = 20*9 + 8 + 8"
+    "mecze_liga = 20*9 + 8 + 8 + 8"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -310,7 +310,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.6.13"
   }
  },
  "nbformat": 4,
