--- a/PoissonEkstraklasa.ipynb
+++ b/PoissonEkstraklasa.ipynb
@@ -84,7 +84,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "413000e758fc4580a284320fbc7aff64",
+       "model_id": "e8554dd3fca04baf99cbfe5a186ad497",
        "version_major": 2,
        "version_minor": 0
       },
@@ -98,7 +98,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d446c9e5ca854c299698a9797648a677",
+       "model_id": "a249cdc2aebf431eb1129d9afc17527b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -112,7 +112,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ae0139c7e87c45bfac97e44af87d3628",
+       "model_id": "92ce7a511c9f4145b21ec31cd84e8081",
        "version_major": 2,
        "version_minor": 0
       },
@@ -126,7 +126,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0d879e1c183d45e08c015cfd52555b09",
+       "model_id": "88deca2ee1ca45edb0798f13fdbcd86f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -275,17 +275,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[((2, 1), 827),\n",
+       " ((1, 1), 743),\n",
+       " ((2, 2), 686),\n",
+       " ((1, 2), 649),\n",
+       " ((3, 1), 605),\n",
+       " ((3, 2), 555),\n",
+       " ((2, 3), 447),\n",
+       " ((2, 0), 445),\n",
+       " ((1, 0), 428),\n",
+       " ((1, 3), 374),\n",
+       " ((4, 1), 353),\n",
+       " ((3, 0), 309),\n",
+       " ((3, 3), 295),\n",
+       " ((0, 1), 288),\n",
+       " ((4, 2), 277),\n",
+       " ((0, 2), 263),\n",
+       " ((2, 4), 198),\n",
+       " ((4, 0), 196),\n",
+       " ((0, 0), 184),\n",
+       " ((4, 3), 176),\n",
+       " ((1, 4), 166),\n",
+       " ((3, 4), 162),\n",
+       " ((0, 3), 156),\n",
+       " ((5, 2), 153),\n",
+       " ((5, 1), 134),\n",
+       " ((5, 0), 91),\n",
+       " ((0, 4), 82),\n",
+       " ((5, 3), 76),\n",
+       " ((4, 4), 74),\n",
+       " ((1, 5), 63),\n",
+       " ((2, 5), 55),\n",
+       " ((3, 5), 51),\n",
+       " ((6, 1), 50),\n",
+       " ((6, 2), 49),\n",
+       " ((5, 4), 43)]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#home = home_attack_strength[\"Stal\"]*away_defence_strength[\"Pogoń\"]*avg_strzelone_dom_liga\n",
-    "#away = home_defence_strength[\"Stal\"]*away_attack_strength[\"Pogoń\"]*avg_strzelone_wyjazd_liga\n",
-    "#results = []\n",
-    "#rng = np.random.default_rng()\n",
-    "#for i in range(0,int(n.value)):\n",
-    "#    results.append((rng.poisson(home, 1)[0],rng.poisson(away, 1)[0]))\n",
-    "#Counter(results).most_common(35)"
+    "home = home_attack_strength[\"Podbeskidzie\"]*away_defence_strength[\"Podbeskidzie\"]*avg_strzelone_dom_liga\n",
+    "away = home_defence_strength[\"Wisła\"]*away_attack_strength[\"Wisła\"]*avg_strzelone_wyjazd_liga\n",
+    "results = []\n",
+    "rng = np.random.default_rng()\n",
+    "for i in range(0,int(n.value)):\n",
+    "    results.append((rng.poisson(home, 1)[0],rng.poisson(away, 1)[0]))\n",
+    "Counter(results).most_common(35)"
    ]
   },
   {
