--- a/TimeWeightedEkstraklasa.ipynb
+++ b/TimeWeightedEkstraklasa.ipynb
@@ -70,7 +70,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0fe6b49b594f412da9f40c0fa6ad5694",
+       "model_id": "c7bf4a195afb45a9a4e62ad252930eec",
        "version_major": 2,
        "version_minor": 0
       },
@@ -84,7 +84,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "774d8fb9c6c949ffa74ffb95385a0b28",
+       "model_id": "a83a7075d7fd4a11b686003a3312fa03",
        "version_major": 2,
        "version_minor": 0
       },
@@ -98,7 +98,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5ceca4c69a0b417e80a343b639964b49",
+       "model_id": "ec8ec3aac9ba4aac841b6db727689287",
        "version_major": 2,
        "version_minor": 0
       },
@@ -112,7 +112,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7f0f9a24a6294a18beeafaea8e806f47",
+       "model_id": "4413a046764e40969b98783c98265d8f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -280,18 +280,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[((0, 2), 1134),\n",
+       " ((0, 3), 945),\n",
+       " ((1, 2), 891),\n",
+       " ((0, 1), 888),\n",
+       " ((1, 3), 842),\n",
+       " ((1, 1), 700),\n",
+       " ((0, 4), 644),\n",
+       " ((1, 4), 508),\n",
+       " ((2, 2), 349),\n",
+       " ((0, 5), 343),\n",
+       " ((0, 0), 341),\n",
+       " ((2, 3), 302),\n",
+       " ((1, 0), 262),\n",
+       " ((2, 1), 257),\n",
+       " ((1, 5), 252),\n",
+       " ((2, 4), 224),\n",
+       " ((0, 6), 132),\n",
+       " ((1, 6), 127),\n",
+       " ((2, 5), 118),\n",
+       " ((2, 0), 105),\n",
+       " ((3, 2), 89),\n",
+       " ((3, 3), 87),\n",
+       " ((0, 7), 63),\n",
+       " ((3, 1), 61),\n",
+       " ((1, 7), 47),\n",
+       " ((3, 4), 34),\n",
+       " ((2, 6), 34),\n",
+       " ((3, 0), 31),\n",
+       " ((3, 5), 29),\n",
+       " ((4, 3), 23),\n",
+       " ((4, 2), 18),\n",
+       " ((4, 1), 18),\n",
+       " ((3, 6), 15),\n",
+       " ((1, 8), 11),\n",
+       " ((0, 8), 9)]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "home = home_attack_strength[\"Podbeskidzie\"]*away_defence_strength[\"Wisła\"]*avg_strzelone_dom_liga\n",
+    "away = home_defence_strength[\"Podbeskidzie\"]*away_attack_strength[\"Wisła\"]*avg_strzelone_wyjazd_liga\n",
+    "results = []\n",
+    "rng = np.random.default_rng()\n",
+    "for i in range(0,int(n.value)):\n",
+    "    results.append((rng.poisson(home, 1)[0],rng.poisson(away, 1)[0]))\n",
+    "Counter(results).most_common(35)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "#home = home_attack_strength[\"Płock\"]*away_defence_strength[\"Wisła\"]*avg_strzelone_dom_liga\n",
-    "#away = home_defence_strength[\"Płock\"]*away_attack_strength[\"Wisła\"]*avg_strzelone_wyjazd_liga\n",
-    "#results = []\n",
-    "#rng = np.random.default_rng()\n",
-    "#for i in range(0,int(n.value)):\n",
-    "#    results.append((rng.poisson(home, 1)[0],rng.poisson(away, 1)[0]))\n",
-    "#Counter(results).most_common(35)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
